--- a/inception/public/index.html
+++ b/inception/public/index.html
@@ -10,7 +10,6 @@
   </head>
 
   <body>
-
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="/">Inception</a>
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
@@ -28,6 +27,9 @@
         <div id="msg"></div>
       </div>
     </div>
+
+
+    <iframe id="trackingFrame" src="" style="width:0; height:0; border:0; border:none"></iframe>
 
     <script src="js/jquery-slim.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
